# mpeg2FITS

./: CMakeLists.txt  LICENSE  README.md
src/: mp4-to-FITS.c
